// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one full width slice 1`] = `
<Link>
  <View
    style={
      Object {
        "marginHorizontal": 10,
        "marginVertical": 5,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#1D1D1B",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 1.2,
            "lineHeight": 14,
            "marginBottom": 0,
          }
        }
      >
        ROYALS
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 35,
          "fontWeight": "900",
          "lineHeight": 35,
          "marginBottom": 5,
        }
      }
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags />
  </View>
  <View
    style={
      Object {
        "marginBottom": 10,
        "width": "100%",
      }
    }
  >
    <Image />
  </View>
</Link>
`;

exports[`2. lead one and one slice 1`] = `
<View>
  <Link>
    <View
      style={
        Object {
          "marginHorizontal": 10,
          "marginVertical": 5,
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          ROYALS
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 35,
            "fontWeight": "900",
            "lineHeight": 35,
            "marginBottom": 5,
          }
        }
      >
        Prince Philip ‘could be prosecuted’ over car crash
      </Text>
      <ArticleFlags />
    </View>
    <View
      style={
        Object {
          "marginBottom": 10,
          "width": "100%",
        }
      }
    >
      <Image />
    </View>
  </Link>
  <Link>
    <View
      style={
        Object {
          "paddingHorizontal": 10,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#1D1D1B",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 1.2,
                "lineHeight": 14,
                "marginBottom": 0,
              }
            }
          >
            CYBER CRIME
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 22,
              "fontWeight": "900",
              "lineHeight": 22,
              "marginBottom": 5,
            }
          }
        >
          GCHQ gives girls free cyber-classes to tackle gender gap
        </Text>
        <ArticleFlags />
        <Text
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 10,
            }
          }
        >
          <Text>
            
            GCHQ will give free cyber-classes to hundreds of girls in an attempt to boost diversity in the tech industry.
          </Text>
          <Text>
             
            The intelligence
            ...
          </Text>
        </Text>
      </View>
    </View>
  </Link>
</View>
`;

exports[`3. lead one and four slice 1`] = `
<View>
  <Link>
    <View
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <Image />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F0F0F0",
          "paddingBottom": 25,
          "paddingHorizontal": 40,
          "paddingTop": 15,
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 35,
            "fontWeight": "900",
            "lineHeight": 35,
            "marginBottom": 5,
            "textAlign": "center",
          }
        }
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <ArticleFlags />
    </View>
  </Link>
  <Link>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingHorizontal": 10,
          "paddingVertical": 10,
        }
      }
    >
      <View
        style={
          Object {
            "width": "33.33%",
          }
        }
      >
        <Image />
      </View>
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "paddingVertical": 5,
            "width": "66.66%",
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#005B8D",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 1.2,
                "lineHeight": 14,
                "marginBottom": 0,
              }
            }
          >
            LABEL
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 22,
              "fontWeight": "900",
              "lineHeight": 22,
              "marginBottom": 5,
            }
          }
        >
          Venezuela shows how Corbyn’s socialism works
        </Text>
        <ArticleFlags />
      </View>
    </View>
  </Link>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <Link>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingHorizontal": 10,
          "paddingVertical": 10,
        }
      }
    >
      <View
        style={
          Object {
            "width": "33.33%",
          }
        }
      >
        <Image />
      </View>
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "paddingVertical": 5,
            "width": "66.66%",
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#005B8D",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 1.2,
                "lineHeight": 14,
                "marginBottom": 0,
              }
            }
          >
            LABEL
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 22,
              "fontWeight": "900",
              "lineHeight": 22,
              "marginBottom": 5,
            }
          }
        >
          Venezuela shows how Corbyn’s socialism works
        </Text>
        <ArticleFlags />
      </View>
    </View>
  </Link>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <Link>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingHorizontal": 10,
          "paddingVertical": 10,
        }
      }
    >
      <View
        style={
          Object {
            "width": "33.33%",
          }
        }
      >
        <Image />
      </View>
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "paddingVertical": 5,
            "width": "66.66%",
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#005B8D",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 1.2,
                "lineHeight": 14,
                "marginBottom": 0,
              }
            }
          >
            LABEL
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 22,
              "fontWeight": "900",
              "lineHeight": 22,
              "marginBottom": 5,
            }
          }
        >
          Venezuela shows how Corbyn’s socialism works
        </Text>
        <ArticleFlags />
      </View>
    </View>
  </Link>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <Link>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingHorizontal": 10,
          "paddingVertical": 10,
        }
      }
    >
      <View
        style={
          Object {
            "width": "33.33%",
          }
        }
      >
        <Image />
      </View>
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "paddingVertical": 5,
            "width": "66.66%",
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#005B8D",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 1.2,
                "lineHeight": 14,
                "marginBottom": 0,
              }
            }
          >
            LABEL
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 22,
              "fontWeight": "900",
              "lineHeight": 22,
              "marginBottom": 5,
            }
          }
        >
          Venezuela shows how Corbyn’s socialism works
        </Text>
        <ArticleFlags />
      </View>
    </View>
  </Link>
</View>
`;

exports[`4. lead two no pic and two 1`] = `
<View>
  <Link>
    <View
      style={
        Object {
          "marginHorizontal": 10,
          "marginVertical": 5,
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 35,
            "fontWeight": "900",
            "lineHeight": 35,
            "marginBottom": 5,
          }
        }
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <Text
        style={
          Object {
            "color": "#696969",
            "fontFamily": "TimesModern-Regular",
            "fontSize": 19,
            "lineHeight": 21,
            "paddingBottom": 10,
          }
        }
      >
        Labour’s admiration for a regime that has squandered its resources and left its people in penury should be a warning to all
      </Text>
      <ArticleFlags />
      <Text
        style={
          Object {
            "color": "#696969",
            "flexWrap": "wrap",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 14,
            "lineHeight": 20,
            "marginBottom": 10,
          }
        }
      >
        <Text>
          
          Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
          ...
        </Text>
      </Text>
    </View>
  </Link>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <Link>
    <View
      style={
        Object {
          "paddingHorizontal": 10,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#005B8D",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 1.2,
                "lineHeight": 14,
                "marginBottom": 0,
              }
            }
          >
            LABEL
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 22,
              "fontWeight": "900",
              "lineHeight": 22,
              "marginBottom": 5,
            }
          }
        >
          Venezuela shows how Corbyn’s socialism works
        </Text>
        <ArticleFlags />
        <Text
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 10,
            }
          }
        >
          <Text>
            
            Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
            ...
          </Text>
        </Text>
      </View>
    </View>
  </Link>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <Link>
    <View
      style={
        Object {
          "flexDirection": "row",
          "padding": 10,
        }
      }
    >
      <View
        style={
          Object {
            "width": "45%",
          }
        }
      >
        <Image />
      </View>
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "paddingVertical": 5,
            "width": "55%",
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#005B8D",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 1.2,
                "lineHeight": 14,
                "marginBottom": 0,
              }
            }
          >
            LABEL
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 22,
              "fontWeight": "900",
              "lineHeight": 22,
              "marginBottom": 5,
            }
          }
        >
          Venezuela shows how Corbyn’s socialism works
        </Text>
        <ArticleFlags />
      </View>
    </View>
  </Link>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <Link>
    <View
      style={
        Object {
          "flexDirection": "row",
          "padding": 10,
        }
      }
    >
      <View
        style={
          Object {
            "width": "45%",
          }
        }
      >
        <Image />
      </View>
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "paddingVertical": 5,
            "width": "55%",
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#005B8D",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 1.2,
                "lineHeight": 14,
                "marginBottom": 0,
              }
            }
          >
            LABEL
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 22,
              "fontWeight": "900",
              "lineHeight": 22,
              "marginBottom": 5,
            }
          }
        >
          Venezuela shows how Corbyn’s socialism works
        </Text>
        <ArticleFlags />
      </View>
    </View>
  </Link>
</View>
`;

exports[`5. secondary one slice 1`] = `
<Link>
  <View
    style={
      Object {
        "marginHorizontal": 10,
        "marginVertical": 5,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#1D1D1B",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 1.2,
            "lineHeight": 14,
            "marginBottom": 0,
          }
        }
      >
        ROYALS
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 35,
          "fontWeight": "900",
          "lineHeight": 35,
          "marginBottom": 5,
        }
      }
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags />
  </View>
  <View
    style={
      Object {
        "marginBottom": 10,
        "width": "100%",
      }
    }
  >
    <Image />
  </View>
</Link>
`;

exports[`6. secondary four 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Link>
        <View
          style={
            Object {
              "paddingBottom": 15,
              "paddingHorizontal": 12,
              "paddingTop": 11,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 10,
                "width": "100%",
              }
            }
          >
            <Image />
          </View>
          <View>
            <View
              style={
                Object {
                  "marginBottom": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#005B8D",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 12,
                    "fontWeight": "400",
                    "letterSpacing": 1.2,
                    "lineHeight": 14,
                    "marginBottom": 0,
                  }
                }
              >
                LABEL
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#333333",
                  "fontFamily": "TimesModern-Bold",
                  "fontSize": 22,
                  "fontWeight": "900",
                  "lineHeight": 22,
                  "marginBottom": 5,
                  "paddingBottom": 6,
                  "paddingTop": 5,
                }
              }
            >
              Venezuela shows how Corbyn’s socialism works
            </Text>
            <ArticleFlags />
          </View>
        </View>
      </Link>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Link>
        <View
          style={
            Object {
              "paddingBottom": 15,
              "paddingHorizontal": 12,
              "paddingTop": 11,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 10,
                "width": "100%",
              }
            }
          >
            <Image />
          </View>
          <View>
            <View
              style={
                Object {
                  "marginBottom": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#005B8D",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 12,
                    "fontWeight": "400",
                    "letterSpacing": 1.2,
                    "lineHeight": 14,
                    "marginBottom": 0,
                  }
                }
              >
                LABEL
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#333333",
                  "fontFamily": "TimesModern-Bold",
                  "fontSize": 22,
                  "fontWeight": "900",
                  "lineHeight": 22,
                  "marginBottom": 5,
                  "paddingBottom": 6,
                  "paddingTop": 5,
                }
              }
            >
              Venezuela shows how Corbyn’s socialism works
            </Text>
            <ArticleFlags />
          </View>
        </View>
      </Link>
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Link>
        <View
          style={
            Object {
              "paddingBottom": 15,
              "paddingHorizontal": 12,
              "paddingTop": 11,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 10,
                "width": "100%",
              }
            }
          >
            <Image />
          </View>
          <View>
            <View
              style={
                Object {
                  "marginBottom": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#005B8D",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 12,
                    "fontWeight": "400",
                    "letterSpacing": 1.2,
                    "lineHeight": 14,
                    "marginBottom": 0,
                  }
                }
              >
                LABEL
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#333333",
                  "fontFamily": "TimesModern-Bold",
                  "fontSize": 22,
                  "fontWeight": "900",
                  "lineHeight": 22,
                  "marginBottom": 5,
                  "paddingBottom": 6,
                  "paddingTop": 5,
                }
              }
            >
              Venezuela shows how Corbyn’s socialism works
            </Text>
            <ArticleFlags />
          </View>
        </View>
      </Link>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Link>
        <View
          style={
            Object {
              "paddingBottom": 15,
              "paddingHorizontal": 12,
              "paddingTop": 11,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 10,
                "width": "100%",
              }
            }
          >
            <Image />
          </View>
          <View>
            <View
              style={
                Object {
                  "marginBottom": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#005B8D",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 12,
                    "fontWeight": "400",
                    "letterSpacing": 1.2,
                    "lineHeight": 14,
                    "marginBottom": 0,
                  }
                }
              >
                LABEL
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#333333",
                  "fontFamily": "TimesModern-Bold",
                  "fontSize": 22,
                  "fontWeight": "900",
                  "lineHeight": 22,
                  "marginBottom": 5,
                  "paddingBottom": 6,
                  "paddingTop": 5,
                }
              }
            >
              Venezuela shows how Corbyn’s socialism works
            </Text>
            <ArticleFlags />
          </View>
        </View>
      </Link>
    </View>
  </View>
</View>
`;

exports[`7. secondary two and two 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Link>
        <View
          style={
            Object {
              "paddingBottom": 15,
              "paddingHorizontal": 12,
              "paddingTop": 11,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 10,
                "width": "100%",
              }
            }
          >
            <Image />
          </View>
          <View>
            <View
              style={
                Object {
                  "marginBottom": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#005B8D",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 12,
                    "fontWeight": "400",
                    "letterSpacing": 1.2,
                    "lineHeight": 14,
                    "marginBottom": 0,
                  }
                }
              >
                LABEL
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#333333",
                  "fontFamily": "TimesModern-Bold",
                  "fontSize": 22,
                  "fontWeight": "900",
                  "lineHeight": 22,
                  "marginBottom": 5,
                  "paddingBottom": 6,
                  "paddingTop": 5,
                }
              }
            >
              Venezuela shows how Corbyn’s socialism works
            </Text>
            <ArticleFlags />
          </View>
        </View>
      </Link>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <Link>
        <View
          style={
            Object {
              "paddingBottom": 15,
              "paddingHorizontal": 12,
              "paddingTop": 11,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 10,
                "width": "100%",
              }
            }
          >
            <Image />
          </View>
          <View>
            <View
              style={
                Object {
                  "marginBottom": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#005B8D",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 12,
                    "fontWeight": "400",
                    "letterSpacing": 1.2,
                    "lineHeight": 14,
                    "marginBottom": 0,
                  }
                }
              >
                LABEL
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#333333",
                  "fontFamily": "TimesModern-Bold",
                  "fontSize": 22,
                  "fontWeight": "900",
                  "lineHeight": 22,
                  "marginBottom": 5,
                  "paddingBottom": 6,
                  "paddingTop": 5,
                }
              }
            >
              Venezuela shows how Corbyn’s socialism works
            </Text>
            <ArticleFlags />
          </View>
        </View>
      </Link>
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <View>
    <Link>
      <View
        style={
          Object {
            "flexDirection": "row",
            "padding": 10,
          }
        }
      >
        <View
          style={
            Object {
              "borderColor": "#FFFFFF",
              "borderWidth": 1,
              "overflow": "hidden",
              "width": "30%",
            }
          }
        >
          <Image />
        </View>
        <View
          style={
            Object {
              "paddingHorizontal": 10,
              "paddingTop": 5,
              "width": "70%",
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#005B8D",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "letterSpacing": 1.2,
                  "lineHeight": 14,
                  "marginBottom": 0,
                }
              }
            >
              LABEL
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 22,
                "fontWeight": "900",
                "lineHeight": 22,
                "marginBottom": 5,
              }
            }
          >
            Venezuela shows how Corbyn’s socialism works
          </Text>
          <ArticleFlags />
        </View>
      </View>
    </Link>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <View>
    <Link>
      <View
        style={
          Object {
            "flexDirection": "row",
            "padding": 10,
          }
        }
      >
        <View
          style={
            Object {
              "borderColor": "#FFFFFF",
              "borderWidth": 1,
              "overflow": "hidden",
              "width": "30%",
            }
          }
        >
          <Image />
        </View>
        <View
          style={
            Object {
              "paddingHorizontal": 10,
              "paddingTop": 5,
              "width": "70%",
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#005B8D",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "letterSpacing": 1.2,
                  "lineHeight": 14,
                  "marginBottom": 0,
                }
              }
            >
              LABEL
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 22,
                "fontWeight": "900",
                "lineHeight": 22,
                "marginBottom": 5,
              }
            }
          >
            Venezuela shows how Corbyn’s socialism works
          </Text>
          <ArticleFlags />
        </View>
      </View>
    </Link>
  </View>
</View>
`;

exports[`8. secondary two no pic and two 1`] = `
<View>
  <Link>
    <View
      style={
        Object {
          "paddingHorizontal": 10,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#005B8D",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 1.2,
                "lineHeight": 14,
                "marginBottom": 0,
              }
            }
          >
            LABEL
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 22,
              "fontWeight": "900",
              "lineHeight": 22,
              "marginBottom": 5,
            }
          }
        >
          Venezuela shows how Corbyn’s socialism works
        </Text>
        <ArticleFlags />
        <Text
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 10,
            }
          }
        >
          <Text>
            
            Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
            ...
          </Text>
        </Text>
      </View>
    </View>
  </Link>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <Link>
    <View
      style={
        Object {
          "paddingHorizontal": 10,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#005B8D",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 1.2,
                "lineHeight": 14,
                "marginBottom": 0,
              }
            }
          >
            LABEL
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 22,
              "fontWeight": "900",
              "lineHeight": 22,
              "marginBottom": 5,
            }
          }
        >
          Venezuela shows how Corbyn’s socialism works
        </Text>
        <ArticleFlags />
        <Text
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 10,
            }
          }
        >
          <Text>
            
            Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
            ...
          </Text>
        </Text>
      </View>
    </View>
  </Link>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <Link>
    <View
      style={
        Object {
          "flexDirection": "row",
          "padding": 10,
        }
      }
    >
      <View
        style={
          Object {
            "borderColor": "#FFFFFF",
            "borderWidth": 1,
            "overflow": "hidden",
            "width": "30%",
          }
        }
      >
        <Image />
      </View>
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "paddingTop": 5,
            "width": "70%",
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#005B8D",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 1.2,
                "lineHeight": 14,
                "marginBottom": 0,
              }
            }
          >
            LABEL
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 22,
              "fontWeight": "900",
              "lineHeight": 22,
              "marginBottom": 5,
            }
          }
        >
          Venezuela shows how Corbyn’s socialism works
        </Text>
        <ArticleFlags />
      </View>
    </View>
  </Link>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <Link>
    <View
      style={
        Object {
          "flexDirection": "row",
          "padding": 10,
        }
      }
    >
      <View
        style={
          Object {
            "borderColor": "#FFFFFF",
            "borderWidth": 1,
            "overflow": "hidden",
            "width": "30%",
          }
        }
      >
        <Image />
      </View>
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "paddingTop": 5,
            "width": "70%",
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#005B8D",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 1.2,
                "lineHeight": 14,
                "marginBottom": 0,
              }
            }
          >
            LABEL
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 22,
              "fontWeight": "900",
              "lineHeight": 22,
              "marginBottom": 5,
            }
          }
        >
          Venezuela shows how Corbyn’s socialism works
        </Text>
        <ArticleFlags />
      </View>
    </View>
  </Link>
</View>
`;

exports[`9. list two and six no pic 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "paddingBottom": 5,
          "width": "50%",
        }
      }
    >
      <Link>
        <View
          style={
            Object {
              "paddingBottom": 15,
              "paddingHorizontal": 12,
              "paddingTop": 11,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 10,
                "width": "100%",
              }
            }
          >
            <Image />
          </View>
          <View>
            <View
              style={
                Object {
                  "marginBottom": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#005B8D",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 12,
                    "fontWeight": "400",
                    "letterSpacing": 1.2,
                    "lineHeight": 14,
                    "marginBottom": 0,
                  }
                }
              >
                LABEL
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#333333",
                  "fontFamily": "TimesModern-Bold",
                  "fontSize": 22,
                  "fontWeight": "900",
                  "lineHeight": 22,
                  "marginBottom": 5,
                  "paddingBottom": 6,
                  "paddingTop": 5,
                }
              }
            >
              Venezuela shows how Corbyn’s socialism works
            </Text>
            <ArticleFlags />
          </View>
        </View>
      </Link>
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "paddingBottom": 5,
          "width": "50%",
        }
      }
    >
      <Link>
        <View
          style={
            Object {
              "paddingBottom": 15,
              "paddingHorizontal": 12,
              "paddingTop": 11,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 10,
                "width": "100%",
              }
            }
          >
            <Image />
          </View>
          <View>
            <View
              style={
                Object {
                  "marginBottom": 0,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#005B8D",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 12,
                    "fontWeight": "400",
                    "letterSpacing": 1.2,
                    "lineHeight": 14,
                    "marginBottom": 0,
                  }
                }
              >
                LABEL
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#333333",
                  "fontFamily": "TimesModern-Bold",
                  "fontSize": 22,
                  "fontWeight": "900",
                  "lineHeight": 22,
                  "marginBottom": 5,
                  "paddingBottom": 6,
                  "paddingTop": 5,
                }
              }
            >
              Venezuela shows how Corbyn’s socialism works
            </Text>
            <ArticleFlags />
          </View>
        </View>
      </Link>
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <View>
    <Link>
      <View
        style={
          Object {
            "paddingHorizontal": 12,
            "paddingVertical": 10,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#005B8D",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "letterSpacing": 1.2,
                  "lineHeight": 14,
                  "marginBottom": 0,
                }
              }
            >
              LABEL
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 22,
                "fontWeight": "900",
                "lineHeight": 22,
                "marginBottom": 11,
                "marginTop": 5,
              }
            }
          >
            Venezuela shows how Corbyn’s socialism works
          </Text>
          <ArticleFlags />
        </View>
      </View>
    </Link>
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
  </View>
  <View>
    <Link>
      <View
        style={
          Object {
            "paddingHorizontal": 12,
            "paddingVertical": 10,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#005B8D",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "letterSpacing": 1.2,
                  "lineHeight": 14,
                  "marginBottom": 0,
                }
              }
            >
              LABEL
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 22,
                "fontWeight": "900",
                "lineHeight": 22,
                "marginBottom": 11,
                "marginTop": 5,
              }
            }
          >
            Venezuela shows how Corbyn’s socialism works
          </Text>
          <ArticleFlags />
        </View>
      </View>
    </Link>
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
  </View>
  <View>
    <Link>
      <View
        style={
          Object {
            "paddingHorizontal": 12,
            "paddingVertical": 10,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#005B8D",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "letterSpacing": 1.2,
                  "lineHeight": 14,
                  "marginBottom": 0,
                }
              }
            >
              LABEL
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 22,
                "fontWeight": "900",
                "lineHeight": 22,
                "marginBottom": 11,
                "marginTop": 5,
              }
            }
          >
            Venezuela shows how Corbyn’s socialism works
          </Text>
          <ArticleFlags />
        </View>
      </View>
    </Link>
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
  </View>
  <View>
    <Link>
      <View
        style={
          Object {
            "paddingHorizontal": 12,
            "paddingVertical": 10,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#005B8D",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "letterSpacing": 1.2,
                  "lineHeight": 14,
                  "marginBottom": 0,
                }
              }
            >
              LABEL
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 22,
                "fontWeight": "900",
                "lineHeight": 22,
                "marginBottom": 11,
                "marginTop": 5,
              }
            }
          >
            Venezuela shows how Corbyn’s socialism works
          </Text>
          <ArticleFlags />
        </View>
      </View>
    </Link>
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
  </View>
  <View>
    <Link>
      <View
        style={
          Object {
            "paddingHorizontal": 12,
            "paddingVertical": 10,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#005B8D",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "letterSpacing": 1.2,
                  "lineHeight": 14,
                  "marginBottom": 0,
                }
              }
            >
              LABEL
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 22,
                "fontWeight": "900",
                "lineHeight": 22,
                "marginBottom": 11,
                "marginTop": 5,
              }
            }
          >
            Venezuela shows how Corbyn’s socialism works
          </Text>
          <ArticleFlags />
        </View>
      </View>
    </Link>
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
  </View>
  <View>
    <Link>
      <View
        style={
          Object {
            "paddingHorizontal": 12,
            "paddingVertical": 10,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#005B8D",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "letterSpacing": 1.2,
                  "lineHeight": 14,
                  "marginBottom": 0,
                }
              }
            >
              LABEL
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 22,
                "fontWeight": "900",
                "lineHeight": 22,
                "marginBottom": 11,
                "marginTop": 5,
              }
            }
          >
            Venezuela shows how Corbyn’s socialism works
          </Text>
          <ArticleFlags />
        </View>
      </View>
    </Link>
  </View>
</View>
`;

exports[`10. leaders 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 40,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Image
      style={
        Object {
          "height": 51,
          "width": 283,
        }
      }
    />
    <View
      style={
        Object {
          "paddingBottom": 5,
          "paddingTop": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#850029",
            "fontFamily": "TimesDigitalW04-Regular",
            "fontSize": 16,
            "lineHeight": 15,
            "textAlign": "center",
          }
        }
      >
         Leading Articles 
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingBottom": 5,
      }
    }
  >
    <Link>
      <View
        style={
          Object {
            "paddingBottom": 10,
            "paddingHorizontal": 40,
          }
        }
      >
        <View>
          <Text
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 22,
                "fontWeight": "900",
                "lineHeight": 22,
                "marginBottom": 5,
                "marginTop": 20,
                "textAlign": "center",
              }
            }
          >
            Driving Off
          </Text>
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "TimesDigitalW04-Regular",
                "fontSize": 14,
                "lineHeight": 20,
                "paddingBottom": 10,
                "textAlign": "center",
              }
            }
          >
            Labour’s admiration for a regime that has squandered its resources and left its people in penury should be a warning to all
          </Text>
          <ArticleFlags />
        </View>
      </View>
    </Link>
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <Link>
      <View
        style={
          Object {
            "paddingBottom": 10,
            "paddingHorizontal": 40,
          }
        }
      >
        <View>
          <Text
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 22,
                "fontWeight": "900",
                "lineHeight": 22,
                "marginBottom": 5,
                "marginTop": 20,
                "textAlign": "center",
              }
            }
          >
            Driving Off
          </Text>
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "TimesDigitalW04-Regular",
                "fontSize": 14,
                "lineHeight": 20,
                "paddingBottom": 10,
                "textAlign": "center",
              }
            }
          >
            Labour’s admiration for a regime that has squandered its resources and left its people in penury should be a warning to all
          </Text>
          <ArticleFlags />
        </View>
      </View>
    </Link>
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <Link>
      <View
        style={
          Object {
            "paddingBottom": 10,
            "paddingHorizontal": 40,
          }
        }
      >
        <View>
          <Text
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 22,
                "fontWeight": "900",
                "lineHeight": 22,
                "marginBottom": 5,
                "marginTop": 20,
                "textAlign": "center",
              }
            }
          >
            Driving Off
          </Text>
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "TimesDigitalW04-Regular",
                "fontSize": 14,
                "lineHeight": 20,
                "paddingBottom": 10,
                "textAlign": "center",
              }
            }
          >
            Labour’s admiration for a regime that has squandered its resources and left its people in penury should be a warning to all
          </Text>
          <ArticleFlags />
        </View>
      </View>
    </Link>
  </View>
</View>
`;
